--- a/Pandas/Pandas Demo.ipynb
+++ b/Pandas/Pandas Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cc7a213d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fa1423f4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "24ca226a",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "(89184, 84)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "976007df",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d533ac81",
    "metadata": {},
    "outputs": [
@@ -936,7 +936,7 @@
        "4  Neither easy nor difficult              23456.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "83421878",
    "metadata": {},
    "outputs": [
@@ -1930,7 +1930,7 @@
        "77     MAVR  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,8 +1941,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2025de5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ResponseId', 'Q120', 'MainBranch', 'Age', 'Employment', 'RemoteWork',\n",
+       "       'CodingActivities', 'EdLevel', 'LearnCode', 'LearnCodeOnline',\n",
+       "       'LearnCodeCoursesCert', 'YearsCode', 'YearsCodePro', 'DevType',\n",
+       "       'OrgSize', 'PurchaseInfluence', 'TechList', 'BuyNewTool', 'Country',\n",
+       "       'Currency', 'CompTotal', 'LanguageHaveWorkedWith',\n",
+       "       'LanguageWantToWorkWith', 'DatabaseHaveWorkedWith',\n",
+       "       'DatabaseWantToWorkWith', 'PlatformHaveWorkedWith',\n",
+       "       'PlatformWantToWorkWith', 'WebframeHaveWorkedWith',\n",
+       "       'WebframeWantToWorkWith', 'MiscTechHaveWorkedWith',\n",
+       "       'MiscTechWantToWorkWith', 'ToolsTechHaveWorkedWith',\n",
+       "       'ToolsTechWantToWorkWith', 'NEWCollabToolsHaveWorkedWith',\n",
+       "       'NEWCollabToolsWantToWorkWith', 'OpSysPersonal use',\n",
+       "       'OpSysProfessional use', 'OfficeStackAsyncHaveWorkedWith',\n",
+       "       'OfficeStackAsyncWantToWorkWith', 'OfficeStackSyncHaveWorkedWith',\n",
+       "       'OfficeStackSyncWantToWorkWith', 'AISearchHaveWorkedWith',\n",
+       "       'AISearchWantToWorkWith', 'AIDevHaveWorkedWith', 'AIDevWantToWorkWith',\n",
+       "       'NEWSOSites', 'SOVisitFreq', 'SOAccount', 'SOPartFreq', 'SOComm',\n",
+       "       'SOAI', 'AISelect', 'AISent', 'AIAcc', 'AIBen',\n",
+       "       'AIToolInterested in Using', 'AIToolCurrently Using',\n",
+       "       'AIToolNot interested in Using', 'AINextVery different',\n",
+       "       'AINextNeither different nor similar', 'AINextSomewhat similar',\n",
+       "       'AINextVery similar', 'AINextSomewhat different', 'TBranch', 'ICorPM',\n",
+       "       'WorkExp', 'Knowledge_1', 'Knowledge_2', 'Knowledge_3', 'Knowledge_4',\n",
+       "       'Knowledge_5', 'Knowledge_6', 'Knowledge_7', 'Knowledge_8',\n",
+       "       'Frequency_1', 'Frequency_2', 'Frequency_3', 'TimeSearching',\n",
+       "       'TimeAnswering', 'ProfessionalTech', 'Industry', 'SurveyLength',\n",
+       "       'SurveyEase', 'ConvertedCompYearly'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "647c218c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                      NaN\n",
+       "1        Hobby;Contribute to open-source projects;Boots...\n",
+       "2        Hobby;Professional development or self-paced l...\n",
+       "3                                                    Hobby\n",
+       "4        Hobby;Contribute to open-source projects;Profe...\n",
+       "                               ...                        \n",
+       "89179    Hobby;Bootstrapping a business;Freelance/contr...\n",
+       "89180                              School or academic work\n",
+       "89181                                                  NaN\n",
+       "89182                        Hobby;School or academic work\n",
+       "89183    Hobby;Professional development or self-paced l...\n",
+       "Name: CodingActivities, Length: 89184, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['CodingActivities']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5e2ff04b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                  NaN\n",
+       "1    Hobby;Contribute to open-source projects;Boots...\n",
+       "2    Hobby;Professional development or self-paced l...\n",
+       "Name: CodingActivities, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[[0,1,2], 'CodingActivities']\n",
+    "#or using slicing such as\n",
+    "#df.loc[0:2, 'CodingActivities']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6932917c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MainBranch</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Employment</th>\n",
+       "      <th>RemoteWork</th>\n",
+       "      <th>CodingActivities</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None of these</td>\n",
+       "      <td>18-24 years old</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>25-34 years old</td>\n",
+       "      <td>Employed, full-time</td>\n",
+       "      <td>Remote</td>\n",
+       "      <td>Hobby;Contribute to open-source projects;Boots...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>45-54 years old</td>\n",
+       "      <td>Employed, full-time</td>\n",
+       "      <td>Hybrid (some remote, some in-person)</td>\n",
+       "      <td>Hobby;Professional development or self-paced l...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       MainBranch              Age           Employment  \\\n",
+       "0                   None of these  18-24 years old                  NaN   \n",
+       "1  I am a developer by profession  25-34 years old  Employed, full-time   \n",
+       "2  I am a developer by profession  45-54 years old  Employed, full-time   \n",
+       "\n",
+       "                             RemoteWork  \\\n",
+       "0                                   NaN   \n",
+       "1                                Remote   \n",
+       "2  Hybrid (some remote, some in-person)   \n",
+       "\n",
+       "                                    CodingActivities  \n",
+       "0                                                NaN  \n",
+       "1  Hobby;Contribute to open-source projects;Boots...  \n",
+       "2  Hobby;Professional development or self-paced l...  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0:2, 'MainBranch': 'CodingActivities']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53a40132",
    "metadata": {},
    "outputs": [],
    "source": []
