--- a/Pandas/Snippets.ipynb
+++ b/Pandas/Snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "e4955762",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "cd7a0916",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "7eff3568",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "62e42e0d",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "2    Shen   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "d218c76e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "2   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "655bbb7b",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "5147c0d9",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "2  example3@gmail.com   Lee"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,8 +266,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "12670594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.set_index('email', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d1d3f079",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>email</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>example1@gmail.com</th>\n",
+       "      <td>Kelvin</td>\n",
+       "      <td>Jinn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>example2@gmail.com</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>example3@gmail.com</th>\n",
+       "      <td>Shen</td>\n",
+       "      <td>Lee</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     first  last\n",
+       "email                           \n",
+       "example1@gmail.com  Kelvin  Jinn\n",
+       "example2@gmail.com    John  Dave\n",
+       "example3@gmail.com    Shen   Lee"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c482c050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kelvin'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.loc['example1@gmail.com', 'first']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c72be2f",
    "metadata": {},
    "outputs": [],
    "source": []
