--- a/Pandas/Snippets.ipynb
+++ b/Pandas/Snippets.ipynb
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d1d3f079",
+   "id": "8f698f2f",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c482c050",
+   "id": "7f44b209",
    "metadata": {},
    "outputs": [
     {
@@ -370,8 +370,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "c68e0b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first    Kelvin\n",
+       "last       Jinn\n",
+       "Name: example1@gmail.com, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1471e5b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>email</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>example1@gmail.com</td>\n",
+       "      <td>Kelvin</td>\n",
+       "      <td>Jinn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>example2@gmail.com</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>example3@gmail.com</td>\n",
+       "      <td>Shen</td>\n",
+       "      <td>Lee</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index               email   first  last\n",
+       "0      0  example1@gmail.com  Kelvin  Jinn\n",
+       "1      1  example2@gmail.com    John  Dave\n",
+       "2      2  example3@gmail.com    Shen   Lee"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.reset_index(inplace=True)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1c72be2f",
+   "id": "b693d54f",
    "metadata": {},
    "outputs": [],
    "source": []
