--- a/Pandas/Snippets.ipynb
+++ b/Pandas/Snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e4955762",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "cd7a0916",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7eff3568",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "62e42e0d",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "2    Shen   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d218c76e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "2   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "655bbb7b",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "5147c0d9",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "2  example3@gmail.com   Lee"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "12670594",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "8f698f2f",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "example3@gmail.com    Shen   Lee"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "1471e5b9",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>email</th>\n",
        "      <th>first</th>\n",
        "      <th>last</th>\n",
@@ -427,21 +426,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>example1@gmail.com</td>\n",
        "      <td>Kelvin</td>\n",
        "      <td>Jinn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>example2@gmail.com</td>\n",
        "      <td>John</td>\n",
        "      <td>Dave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>example3@gmail.com</td>\n",
        "      <td>Shen</td>\n",
        "      <td>Lee</td>\n",
@@ -451,13 +447,13 @@
        "</div>"
       ],
       "text/plain": [
-       "   index               email   first  last\n",
-       "0      0  example1@gmail.com  Kelvin  Jinn\n",
-       "1      1  example2@gmail.com    John  Dave\n",
-       "2      2  example3@gmail.com    Shen   Lee"
+       "                email   first  last\n",
+       "0  example1@gmail.com  Kelvin  Jinn\n",
+       "1  example2@gmail.com    John  Dave\n",
+       "2  example3@gmail.com    Shen   Lee"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,8 +465,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b693d54f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    example1@gmail.com\n",
+       "Name: email, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#filtering\n",
+    "filt = (result['last'] == 'Jinn') & (result['first'] == 'Kelvin')\n",
+    "result.loc[filt, 'email']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7647c96a",
    "metadata": {},
    "outputs": [],
    "source": []
