--- a/Pandas/Snippets.ipynb
+++ b/Pandas/Snippets.ipynb
@@ -489,8 +489,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "59fb1047",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    example2@gmail.com\n",
+       "2    example3@gmail.com\n",
+       "Name: email, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#using opposite of 'filt'\n",
+    "result.loc[-filt, 'email']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7647c96a",
+   "id": "2520501e",
    "metadata": {},
    "outputs": [],
    "source": []
