--- a/Pandas/demo2.ipynb
+++ b/Pandas/demo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "85cfdaef",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c91de3be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:/Users/USER/Desktop/Python/Pandas/data/survey_results_public.csv\",index_col = 'ResponseId')\n",
-    "scheme_df = pd.read_csv(\"C:/Users/USER/Desktop/Python/Pandas/data/survey_results_schema.csv\", index_col = 'qname')"
+    "df = pd.read_csv(\"data/survey_results_public.csv\",index_col = 'ResponseId')\n",
+    "scheme_df = pd.read_csv(\"data/survey_results_schema.csv\", index_col = 'qname')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4cfccccf",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c19ff3d4",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "[25719 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "71dbe16f",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "add41d54",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "Name: Country, Length: 89184, dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3d4b529e",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "Name: LanguageHaveWorkedWith, Length: 43158, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
