--- a/Pandas/Snippets.ipynb
+++ b/Pandas/Snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "e4955762",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "cd7a0916",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "7eff3568",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "62e42e0d",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "2    Shen   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "d218c76e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "2   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "655bbb7b",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "5147c0d9",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "2  example3@gmail.com   Lee"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "12670594",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "c68e0b8c",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "b693d54f",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "59fb1047",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "Name: email, dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "2520501e",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "Index(['first', 'last', 'email'], dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "2b3a3d41",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "2    Shen   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "c9cbad7f",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "2       Shen       Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "63272c07",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "2       Shen       Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "def0b934",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "2    Shen   Lee  example3@gmail.com"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "5b917a03",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "2    John  Smith  newemail@gmail.com"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "115b5710",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
        "2    John   Doe  newemail@gmail.com"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,8 +804,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "40404c90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>full_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Kelvin</td>\n",
+       "      <td>Jinn</td>\n",
+       "      <td>example1@gmail.com</td>\n",
+       "      <td>Kelvin Jinn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Dave</td>\n",
+       "      <td>example2@gmail.com</td>\n",
+       "      <td>John Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>newemail@gmail.com</td>\n",
+       "      <td>John Doe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    first  last               email    full_name\n",
+       "0  Kelvin  Jinn  example1@gmail.com  Kelvin Jinn\n",
+       "1    John  Dave  example2@gmail.com    John Dave\n",
+       "2    John   Doe  newemail@gmail.com     John Doe"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result['full_name'] = result['first'] + ' '+ result['last']\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1dda8566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email</th>\n",
+       "      <th>full_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>example1@gmail.com</td>\n",
+       "      <td>Kelvin Jinn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>example2@gmail.com</td>\n",
+       "      <td>John Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>newemail@gmail.com</td>\n",
+       "      <td>John Doe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                email    full_name\n",
+       "0  example1@gmail.com  Kelvin Jinn\n",
+       "1  example2@gmail.com    John Dave\n",
+       "2  newemail@gmail.com     John Doe"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.drop(columns=['first','last'], inplace=True)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7ed7335d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Kelvin</td>\n",
+       "      <td>Jinn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0     1\n",
+       "0  Kelvin  Jinn\n",
+       "1    John  Dave\n",
+       "2    John   Doe"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to split up the full_name again\n",
+    "result['full_name'].str.split(' ', expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9a38f929",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>example1@gmail.com</td>\n",
+       "      <td>Kelvin Jinn</td>\n",
+       "      <td>Kelvin</td>\n",
+       "      <td>Jinn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>example2@gmail.com</td>\n",
+       "      <td>John Dave</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>newemail@gmail.com</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                email    full_name   first  last\n",
+       "0  example1@gmail.com  Kelvin Jinn  Kelvin  Jinn\n",
+       "1  example2@gmail.com    John Dave    John  Dave\n",
+       "2  newemail@gmail.com     John Doe    John   Doe"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[['first','last']]=  result['full_name'].str.split(' ', expand=True)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11703526",
    "metadata": {},
    "outputs": [],
    "source": []
