--- a/Pandas/data_1/demo1.ipynb
+++ b/Pandas/data_1/demo1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "cc7a213d",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "fa1423f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/survey_results_public.csv', index_col='ResponseId')\n",
-    "schema_df = pd.read_csv('data/survey_results_schema.csv', index_col= 'qname')"
+    "df = pd.read_csv('survey_results_public.csv', index_col='ResponseId')\n",
+    "schema_df = pd.read_csv('survey_results_schema.csv', index_col= 'qname')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "24ca226a",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "(89184, 83)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "976007df",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "d533ac81",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
        "5                       23456.0  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "83421878",
    "metadata": {},
    "outputs": [
@@ -2053,7 +2053,7 @@
        "Frequency_3                 NaN      MC     MAVR  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "f5583513",
    "metadata": {},
    "outputs": [
@@ -2074,7 +2074,7 @@
        "'Which best describes your current work situation?'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "d9579256",
    "metadata": {},
    "outputs": [
@@ -2999,7 +2999,7 @@
        "YearsCodePro              False      MC       DL  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,7 +3010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "2025de5e",
    "metadata": {},
    "outputs": [
@@ -3047,7 +3047,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3058,7 +3058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "e3b7adba",
    "metadata": {},
    "outputs": [
@@ -3080,7 +3080,7 @@
        "Name: CodingActivities, Length: 89184, dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3091,7 +3091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "3c6a69ce",
    "metadata": {},
    "outputs": [
@@ -3105,7 +3105,7 @@
        "Name: CodingActivities, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "7dec56f6",
    "metadata": {},
    "outputs": [
@@ -3196,7 +3196,7 @@
        "2           Hobby;Contribute to open-source projects;Boots...  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
