--- a/Pandas/data_1/demo2.ipynb
+++ b/Pandas/data_1/demo2.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/survey_results_public.csv\",index_col = 'ResponseId')\n",
-    "scheme_df = pd.read_csv(\"data/survey_results_schema.csv\", index_col = 'qname')"
+    "df = pd.read_csv(\"survey_results_public.csv\",index_col = 'ResponseId')\n",
+    "scheme_df = pd.read_csv(\"survey_results_schema.csv\", index_col = 'qname')"
    ]
   },
   {
